--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOVYRIgupAurZup5y1PRh8Ismb1A3lLao&libraries=places"></script>
+  <!--KEY TESTING-->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOVYRIgupAurZup5y1PRh8Ismb1A3lLao&libraries=places"></script>
+
+  <!--KEY EFFETTIVA-->
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3y-Gq7hIuzLL3225wMdFQutVwr0BFrok&libraries=places"></script>-->
  </head>
  <body class="mat-typography">
